fix: make slogan fit container on smaller devices

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -7,15 +7,15 @@
 body {
   overflow-x: hidden;
   font-family: {{ site.data.template.font.secondary }};
-  color: #{{ site.data.template.color.primary-light }};
+  color: {{ site.data.template.color.primary-light }};
 }
 
 .text-muted {
-  color: #{{ site.data.template.color.muted }};
+  color: {{ site.data.template.color.muted }};
 }
 
 .text-primary {
-  color: #{{ site.data.template.color.primary }};
+  color: {{ site.data.template.color.primary }};
 }
 
 p {
@@ -36,14 +36,14 @@ a.active {
 }
 
 a {
-  color: #{{ site.data.template.color.primary }};
+  color: {{ site.data.template.color.primary }};
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #{{ site.data.template.color.secondary }};
+  color: {{ site.data.template.color.secondary }};
 }
 
 h1,
@@ -70,12 +70,12 @@ h6 {
 }
 
 .btn-primary {
-  border-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
   text-transform: uppercase;
   font-family: {{ site.data.template.font.primary }};
   font-weight: 700;
   color: #fff;
-  background-color: #{{ site.data.template.color.primary }};
+  background-color: {{ site.data.template.color.primary }};
 }
 
 .btn-primary:hover,
@@ -83,9 +83,9 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  border-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
   color: #fff;
-  background-color: #{{ site.data.template.color.secondary }};
+  background-color: {{ site.data.template.color.secondary }};
 }
 
 .btn-primary:active,
@@ -109,25 +109,25 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  border-color: #{{ site.data.template.color.primary }};
-  background-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
+  background-color: {{ site.data.template.color.primary }};
 }
 
 .btn-primary .badge {
-  color: #{{ site.data.template.color.primary }};
+  color: {{ site.data.template.color.primary }};
   background-color: #fff;
 }
 
 .btn-xl {
   padding: 20px 40px;
-  border-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
   border-radius: 3px;
   text-transform: uppercase;
   font-family: {{ site.data.template.font.primary }};
   font-size: 18px;
   font-weight: 700;
   color: #fff;
-  background-color: #{{ site.data.template.color.primary }};
+  background-color: {{ site.data.template.color.primary }};
 }
 
 .btn-xl:hover,
@@ -135,9 +135,9 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-  border-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
   color: #fff;
-  background-color: #{{ site.data.template.color.secondary }};
+  background-color: {{ site.data.template.color.secondary }};
 }
 
 .btn-xl:active,
@@ -161,12 +161,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  border-color: #{{ site.data.template.color.primary }};
-  background-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
+  background-color: {{ site.data.template.color.primary }};
 }
 
 .btn-xl .badge {
-  color: #{{ site.data.template.color.primary }};
+  color: {{ site.data.template.color.primary }};
   background-color: #fff;
 }
 
@@ -177,7 +177,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
   font-family: sofia-pro,"Times New Roman", serif;
-  color: #{{ site.data.template.color.primary }};
+  color: {{ site.data.template.color.primary }};
 }
 
 .navbar-default.navbar-shrink .navbar-brand>p {
@@ -189,6 +189,17 @@ fieldset[disabled] .btn-xl.active {
   width: 100%;
   border-top: 2px solid {{ site.data.template.color.skin }};
   margin: 5px 0 0;
+}
+
+@media(max-width:767px) {
+  .navbar-default .navbar-brand>hr {
+    margin-top: 1px;
+  }
+
+  .navbar-default .navbar-brand>p {
+    line-height: 1;
+    font-size: 12px;
+  }
 }
 
 .navbar-default.navbar-shrink .navbar-brand>hr {
@@ -204,7 +215,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-  color: #{{ site.data.template.color.secondary }};
+  color: {{ site.data.template.color.secondary }};
 }
 
 .navbar-default .navbar-collapse {
@@ -217,12 +228,12 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #{{ site.data.template.color.primary}};
+  background-color: {{ site.data.template.color.primary}};
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #{{ site.data.template.color.highlight-bg }};
+  background-color: {{ site.data.template.color.highlight-bg }};
 }
 
 .navbar-default .nav li a {
@@ -230,7 +241,7 @@ fieldset[disabled] .btn-xl.active {
   font-family: {{ site.data.template.font.secondary }};
   font-weight: 400;
   letter-spacing: 1px;
-  color: #{{ site.data.template.color.primary }};
+  color: {{ site.data.template.color.primary }};
   -webkit-transition: all ease .35s;
   -moz-transition: all ease .35s;
   transition: all ease .35s;
@@ -239,19 +250,19 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
   outline: 0;
-  color: #{{ site.data.template.color.highlight }};
+  color: {{ site.data.template.color.highlight }};
 }
 
 .navbar-default .navbar-nav>.active>a {
   border-radius: 0;
-  color: #{{ site.data.template.color.highlight }};
-  background-color: #{{ site.data.template.color.highlight-bg }};
+  color: {{ site.data.template.color.highlight }};
+  background-color: {{ site.data.template.color.highlight-bg }};
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
   color: #fff;
-  background-color: #{{ site.data.template.color.highlight-bg }};
+  background-color: {{ site.data.template.color.highlight-bg }};
 }
 
 @media(min-width:768px) {
@@ -698,7 +709,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #{{ site.data.template.color.primary }};
+  border-color: {{ site.data.template.color.primary }};
   box-shadow: none;
 }
 
@@ -776,7 +787,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #{{ site.data.template.color.primary }};
+  background-color: {{ site.data.template.color.primary }};
 }
 
 .btn:focus,
@@ -859,12 +870,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
   text-shadow: none;
-  background: #{{ site.data.template.color.primary }};
+  background: {{ site.data.template.color.primary }};
 }
 
 ::selection {
   text-shadow: none;
-  background: #{{ site.data.template.color.primary }};
+  background: {{ site.data.template.color.primary }};
 }
 
 img::selection {
@@ -876,7 +887,7 @@ img::-moz-selection {
 }
 
 body {
-  webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
+  webkit-tap-highlight-color: {{ site.data.template.color.primary }};
 }
 
 /************* BOOTSRTAP OVERWRITES *************/
@@ -891,7 +902,7 @@ body {
 }
 
 .border-btn {
-  border: 1px solid #{{site.data.template.color.primary}};
+  border: 1px solid {{site.data.template.color.primary}};
 }
 
 .justified {
